cluster/dev/tictac/tictac-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tictac-server
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: tictac-server
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: websocket
