cluster/dev/tictac/tictac-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tictac-server
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - tictac.home.arpa
      secretName: tictac-server-tls
  rules:
    - host: tictac.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tictac-server
                port:
                  number: 8080
